# x86CodeGenerator

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  CTestTestfile.cmake  bf_generator.cpp  bf_generator.hpp  bf_peephole.cpp  bf_peephole.hpp  bf_translator.cpp  bf_translator.hpp  brainfuck  cmake_install.cmake  elf_builder.cpp  elf_builder.hpp  main.cpp
include/: addressing.hpp  codegenerator.hpp  generic_interface.hpp  registers.hpp
src/: CMakeLists.txt  cmake_install.cmake  codegenerator.cpp  generic_interface.cpp  main.cpp
src/instructions/: addsub.cpp  andorxor.cpp  calljmp.cpp  cmp.cpp  flagops.cpp  incdec.cpp  int.cpp  lea.cpp  mov.cpp  mul.cpp  pushpop.cpp  ret.cpp  strops.cpp
tests/: CMakeLists.txt  addressing_modes_tests.cpp  addsub_tests.cpp  combined_gen_test.cpp  execute_test.cpp  gen_interface_test.cpp  generic_interface_test.cpp  lea_tests.cpp  move_tests.cpp  tests
